--- a/edgebound/src/app/components/home/home.component.html
+++ b/edgebound/src/app/components/home/home.component.html
@@ -242,118 +242,6 @@
         </button>
 
       </div>
-      <!-- CAROUSEL DOS -->
-      <!-- <div id="carouselPromos" class="carousel slide carousel-promo" data-bs-ride="carousel">
-        <div class="carousel-inner-acomodado">
-          <div class="carousel-item active" data-bs-interval="15000">
-            <div class="row efect-promo">
-            <div class="col-3">
-                <div class="card">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/1.126/1.126_1_400x400.jpg" class="card-img-top" alt="AZULEJO ETANA 20X30 HUESO 1.52 1A">
-                  </a>
-                  <div class="card-body">
-                    <b class="card-title">$180.46</b>
-                    <p class="card-text">AZULEJO ETANA 20X30 HUESO 1.52 1A</p>
-                  </div>
-                </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jpg" class="card-img-top" alt="6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$770.63</b>
-                  <p class="card-text">6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.2085/444.2085_1_400x400.jpg" class="card-img-top" alt="1660604MX.002 REGADERA FLUENT CROMO">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$1,612.03</b>
-                  <p class="card-text">1660604MX.002 REGADERA FLUENT CROMO</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/36.109/36.109_1_400x400.jpg" class="card-img-top" alt="FREGADERO 8821022 (08131022) 1C 2PERF. 381.381">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$771.38</b>
-                  <p class="card-text">FREGADERO 8821022 (08131022) 1C 2PERF. 381.381</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          </div>
-          
-          <div class="carousel-item" data-bs-interval="15000">
-            <div class="row efect-promo">
-            <div class="col-3">
-                <div class="card">
-                  <a href="">
-                    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/72.206/72.206_1_400x400.jpg" class="card-img-top" alt="JUEGO DE MANERALES T6193BL SAL- P/LAV. NEGRO MATTE  ">
-                  </a>
-                  <div class="card-body">
-                    <b class="card-title">$6,372.45</b>
-                    <p class="card-text">JUEGO DE MANERALES T6193BL SAL- P/LAV. NEGRO MATTE</p>
-                  </div>
-                </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jpg" class="card-img-top" alt="6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$770.63</b>
-                  <p class="card-text">6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.2085/444.2085_1_400x400.jpg" class="card-img-top" alt="1660604MX.002 REGADERA FLUENT CROMO">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$1,612.03</b>
-                  <p class="card-text">1660604MX.002 REGADERA FLUENT CROMO</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <a href="">
-                  <img src="https://s3.amazonaws.com/llanomx.wcaas.media/36.109/36.109_1_400x400.jpg" class="card-img-top" alt="FREGADERO 8821022 (08131022) 1C 2PERF. 381.381">
-                </a>
-                <div class="card-body">
-                  <b class="card-title">$771.38</b>
-                  <p class="card-text">FREGADERO 8821022 (08131022) 1C 2PERF. 381.381</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          </div>
-        </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselPromos"  data-bs-slide="prev">
-          <span class="material-icons ico-left" aria-hidden="true">chevron_left</span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselPromos"  data-bs-slide="next">
-          <span class="material-icons ico-right" aria-hidden="true">chevron_right</span>
-          <span class="visually-hidden">Next</span>
-        </button>
-        
-      </div> -->
 
       <!-- BANNER -->
       <div class="banner-single">
@@ -372,7 +260,7 @@
             <div>
               <label>
                 <input type="email" placeholder="correo electrónico" value="">
-                <i class="material-icons">email</i>
+                <i class="material-icons-outlined">email</i>
               </label>
               <button>
                 <i class="material-icons">send</i>
