--- a/edgebound/src/app/components/navbar/navbar.component.html
+++ b/edgebound/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
         </a>
       </div>
       <div class="menu-actions-btn menu-actions-cart">
-        <a href="">
+        <a routerLink="cart">
           <img src="https://llanodelatorre.com.mx/static/media/icon-cart.13a9e995.svg" alt="cart">
           <span>0</span>
         </a>
