--- a/edgebound/src/styles.css
+++ b/edgebound/src/styles.css
@@ -5,6 +5,22 @@
   outline: none;
   box-sizing: border-box;
 }
+@font-face{
+  font-family: "MuseoSans";
+  src: url("assets/subset-MuseoSans-100.woff2");
+}
+@font-face{
+  font-family: "MuseoSans-3";
+  src: url("assets/subset-MuseoSans-300.woff2");
+}
+@font-face{
+  font-family: "MuseoSans-5";
+  src: url("assets/subset-MuseoSans-500.woff2");
+}
+@font-face{
+  font-family: "MuseoSans-7";
+  src: url("assets/subset-MuseoSans-700.woff2");
+}
 
 body {
   font-family: "Museo Sans", sans-serif;
@@ -37,6 +53,11 @@ picture {
 
 button {
   border: none;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
 input, select, textarea {
   width: 100%;
@@ -135,6 +156,7 @@ header {
   flex-flow: row nowrap;
   align-items: center;
   background-color: #eee;
+  font-family: "MuseoSans-3";
 }
 
 .search-form label {
@@ -162,6 +184,7 @@ label {
 }
 
 .menu-links {
+  font-family: "MuseoSans-5";
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -218,6 +241,7 @@ label {
 }
 
 .menu-actions {
+  font-family: "MuseoSans-5";
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -280,8 +304,9 @@ label {
 .nav-menu {
   display: block;
   background-color: #222;
-  /* max-width: 1260px; */
+  font-family: "MuseoSans-5";
   width: 100%;
+  /* max-width: 1260px; */
   /* height: 39px;
   margin: auto; */
 }
@@ -460,6 +485,7 @@ main {
 }
 
 .breadcrumb {
+  font-family: "MuseoSans-5";
   width: 100%;
   max-width: 1260px;
   margin: auto;
@@ -662,7 +688,7 @@ main {
   width: 100%;
   max-width: 1260px;
   display: block;
-  margin: auto auto 1rem;
+  margin: auto auto 2rem;
   line-height: 0;
 }
 
@@ -699,6 +725,7 @@ main {
 }
 
 .newsletter-form p {
+  font-family: "MuseoSans-7";
   width: 38%;
   text-align: center;
   padding: 0;
@@ -717,6 +744,7 @@ main {
   background-color: #fff;
   width: 50%;
   border: none;
+  height: 51px;
 }
 
 .newsletter-form div label {
@@ -726,9 +754,11 @@ main {
   flex-flow: row nowrap;
   justify-content: flex-start;
   align-items: stretch;
+  height: 51px;
 }
 
 .newsletter-form div label input {
+  font-family: "MuseoSans-3";
   color: #666;
   border: none;
   padding: 1rem 1rem 1rem 3.6rem;
@@ -759,6 +789,8 @@ main {
 
 /* --------- FOOTER ------------ */
 .layout-footer {
+  font-family: "MuseoSans-3";
+
   width: 100%;
   display: block;
   background-color: #222;
@@ -862,7 +894,7 @@ main {
   padding-bottom: 0;
   margin-bottom: 0;
   flex-flow: row wrap;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .layout-footer-cards div:last-child {
@@ -888,7 +920,7 @@ main {
 
 .layout-footer-copyright a {
   color: #ccc;
-  padding: .25rem;
+  padding-left: .25rem;
 }
 
 .layout-footer-copyright a:hover {
@@ -946,6 +978,7 @@ main {
 }
 
 .layout-footer-contact div {
+  font-family: "MuseoSans-5";
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
@@ -981,7 +1014,12 @@ main {
   transform: scale(.95);
   box-shadow: 0 0 1rem #eee;
 }
+.card-body{
+  padding: 1rem 0;
+}
 .card-title {
+  color: black;
+  font-family: "MuseoSans-3";
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -991,6 +1029,8 @@ main {
   margin-right: 1rem; */
 }
 .card-text {
+  font-family: "MuseoSans-5";
+  color: black;
   font-size: .85rem;
   min-height: 34px;
   margin: .75rem 0;
@@ -1158,4 +1198,733 @@ input:active, input:focus, select:active, select:focus, textarea:active, textare
   position: relative;
   width: 100%;
   overflow: hidden;
+}
+
+
+
+/* --------- FILTRO Y CARDS DE VENTA -------------- */
+
+.catalog {
+    width: 100%;
+    max-width: 1260px;
+    margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0 1rem;
+}
+.filters {
+  width: 100%;
+  background-color: #fff;
+  margin-bottom: 1rem;
+}
+.filters-container {
+  width: 100%;
+  padding: 0;
+  margin: .5rem 0;
+}
+.filters-list {
+  width: 100%;
+  display: block;
+  padding: .5rem;
+  -webkit-animation: slideUp .3s ease;
+  animation: slideUp .3s ease;
+  position: fixed;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: scroll;
+  background-color: #fff;
+  z-index: 4;
+  margin-bottom: 3rem;
+}
+.filters-list-head {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.filters-list-quantity {
+  font-size: .85rem;
+  padding: .5rem;
+  margin-top: .5rem;
+}
+.filters-list-quantity span:last-child {
+  color: #999;
+  margin-left: .25rem;
+}
+.filters-list-head button {
+  display: none;
+  background-color: transparent;
+  padding: .5rem;
+}
+.filters-orderby {
+  width: 100%;
+  padding: 1rem;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  border-top: 1px solid #f6f6f6;
+  -webkit-animation: slideUp .3s ease;
+  animation: slideUp .3s ease;
+  z-index: 3;
+}
+.filters-orderby p {
+  display: none;
+}
+.filters-orderby label {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem;
+  font-size: .85rem;
+  border-bottom: 1px solid #ccc;
+}
+.filters-orderby label:last-of-type {
+  border-bottom: none;
+}
+.filters-orderby label input {
+  width: auto;
+  display: inline-block;
+  margin-right: .25rem;
+}
+.filters-block {
+  width: 100%;
+  padding: .5rem;
+}
+.filters-block-toggle {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding: .5rem;
+  border-bottom: 1px solid #ccc;
+  text-decoration: none;
+}
+.filters-block-toggle i {
+  font-size: 1rem;
+  margin-right: .25rem;
+}
+.filters-block-toggle p {
+  font-size: .85rem;
+  text-transform: capitalize;
+}
+.filters-block-items {
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+}
+.filters-block-items.active {
+  height: auto;
+  padding: .5rem;
+}
+
+.filters-checkbox {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    padding: .75rem;
+    font-size: .9rem;
+    cursor: pointer;
+}
+.filters-checkbox input {
+  width: auto;
+  margin-right: .5rem;
+}
+.filters-checkbox i {
+  width: .85rem;
+  height: .85rem;
+  border: 1px solid #fff;
+  margin-left: .25rem;
+  border-radius: 99px;
+}
+.catalog-container {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 1rem;
+}
+.catalog-item {
+  width: 100%;
+  color: #222;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: .5rem;
+  cursor: pointer;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.catalog-item-picture {
+  width: 40%;
+}
+.catalog-item-info {
+  width: 58%;
+}
+.catalog-item-title {
+  color: #666;
+  font-size: 1rem;
+  font-weight: 300;
+  margin: .5rem 0;
+}
+.catalog-item-price {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: .5rem;
+}
+.catalog-item-price b {
+  font-size: 1.25rem;
+  margin-right: 1rem;
+}
+.catalog-item:hover {
+  -webkit-transform: scale(.95);
+  transform: scale(.95);
+  box-shadow: 0 0 1rem #eee;
+}
+.product-container {
+  width: 100%;
+  max-width: 1260px;
+  margin: auto;
+  display: block;
+}
+.product-images {
+  width: 100%;
+}
+.product-info {
+  width: 100%;
+  padding: 1rem;
+}
+.product-specs {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.img-product{
+  width: 598px;
+  cursor: crosshair;   
+}
+.slick-dots {
+  /* bottom: -25px; */
+  padding: 0;
+  width: 100%;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+.product-images .slick-dots li img{
+  width: 54.422px;
+  /* margin-left: 1rem; */
+}
+.product-info {
+  width: 100%;
+  padding: 1rem;
+}
+.product-info-price-desktop {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-info-price {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.product-info-price-desktop-container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.product-info-price-desktop-container>div {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-info-price-desktop-container>div>p {
+  font-size: 1.65rem;
+  margin-right: .75rem;
+}
+.product-favorite-guest {
+  position: relative;
+}
+.product-favorite a, .product-favorite button {
+    color: #222;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.product-favorite a span, .product-favorite button span {
+  font-size: .85rem;
+  margin-right: .25rem;
+  display: none;
+}
+.product-favorite a i, .product-favorite button i {
+  font-size: 2rem;
+}
+.product-favorite-guest div {
+  width: 100%;
+  display: none;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.product-favorite-guest div span {
+  width: 1rem;
+  height: 1rem;
+  background-color: #666;
+  -webkit-clip-path: polygon(50% 0,0 100%,100% 100%);
+  clip-path: polygon(50% 0,0 100%,100% 100%);
+}
+.product-favorite-guest div p {
+  padding: 1rem;
+  font-size: .8rem;
+  font-weight: 300;
+  color: #fff;
+  background-color: #666;
+  border-radius: .3rem;
+  margin-top: -.65rem;
+}
+.product-favorite-guest:hover div {
+  visibility: visible;
+  opacity: 1;
+}
+.product-options {
+  width: 100%;
+  padding: 1rem 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+}
+.product-options div {
+  width: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.product-options div label {
+  display: inline-block;
+  margin: .25rem .5rem .25rem 0;
+  cursor: pointer;
+}
+.product-options div label input {
+  display: none;
+}
+.product-options-text label input:checked+span {
+  color: #fff;
+  background-color: #222;
+}
+.product-options-text label span {
+  font-family: "MuseoSans-5";
+  font-size: .8rem;
+  padding: .5rem;
+  color: #222;
+  background-color: #eee;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.product-options>p {
+  font-family: "MuseoSans-5";
+  font-size: .9rem;
+  display: inline-block;
+  margin: .25rem .5rem .25rem 0;
+}
+.product-options-color-sample {
+  width: 2rem!important;
+  height: 1rem;
+  border-radius: 99px;
+  display: inline-block!important;
+}
+.product-options div {
+  width: auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.product-add-to-cart {
+  font-family: "MuseoSans-5";
+  width: 100%;
+  padding: .5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.product-add-to-cart-combo {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: stretch;
+}
+.product-add-to-cart-combo button {
+  padding: .25rem .5rem;
+  line-height: 0;
+  background-color: #fff;
+}
+.product-add-to-cart-combo p {
+  font-size: .9rem;
+  padding: .5rem 1rem;
+  background-color: #f6f6f6;
+}
+.product-add-to-cart-button button {
+  color: #fff;
+  background-color: #222;
+  padding: .75rem 1.5rem;
+  text-align: center;
+  border-radius: .3rem;
+}
+.product-add-to-cart-button button:hover {
+  background-color: #cc1f2d;
+}
+.product-calculator {
+  width: 100%;
+  margin: 1rem 0;
+}
+.product-calculator-header {
+  z-index: 1;
+  font-family: "MuseoSans-7";
+  width: 100%;
+  margin-bottom: .5rem;
+}
+.product-calculator-header h4 {
+  font-family: "MuseoSans-7";
+  font-size: 1.15rem;
+  margin-bottom: .25rem;
+}
+.product-calculator-header p {
+  font-family: "MuseoSans-3";
+  font-size: .9rem;
+  font-weight: 300;
+}
+.product-calculator-form {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: .75rem;
+}
+.product-calculator-form button:hover {
+  background-color: #900;
+}
+.product-calculator-form label {
+  font-family: "MuseoSans-3";
+  margin-right: .5rem;
+}
+.product-calculator-form button {
+    font-family: "MuseoSans-5";
+    padding: 1rem 1.5rem;
+    border-radius: .3rem;
+    color: #fff;
+    background-color: #cc1f2d;
+}
+.product-calculator-copy {
+    font-family: "MuseoSans-5";
+    width: 100%;
+    font-size: .8rem;
+    color: #999;
+    margin: .5rem 0;
+}
+.product-social {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1rem 0;
+}
+.product-social p {
+  display: inline-block;
+  font-size: .85rem;
+  margin-right: .75rem;
+}
+.product-social button {
+  width: 1.75rem;
+  margin-right: .75rem;
+}
+.product-social button img {
+  width: 100%;
+}
+.product-specs {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.product-specs-title {
+  width: 100%;
+}
+.product-specs-title h3 {
+  font-family: "MuseoSans-3";
+  display: inline-block;
+  font-size: 1.25rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 0 1rem .25rem 0;
+  border-bottom: 1px solid #cc1f2d;
+  margin-bottom: .5rem;
+}
+.product-specs-description {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.product-specs-description p {
+  font-family: "MuseoSans-5";
+  font-size: .9rem;
+  padding: .5rem;
+}
+.product-specs-attributes {
+  font-family: "MuseoSans-5";
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: stretch;
+    border: 1px solid #eee;
+}
+.product-specs-attributes div {
+  width: 100%;
+  margin-bottom: 1px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  background-color: #fff;
+}
+.product-specs-attributes div p {
+  width: 60%;
+  display: inline-block;
+  font-size: .85rem;
+  padding: .5rem;
+}
+.product-specs-attributes div p:nth-child(odd) {
+  background-color: #f6f6f6;
+  width: 40%;
+}
+
+/* ------ */
+@media screen and (min-width: 1024px){
+  .product-favorite-guest div {
+    display: inline-block;
+  }
+  .product-favorite a i, .product-favorite button i {
+    font-size: 1.5rem;
+}
+  .product-favorite a span, .product-favorite button span {
+    display: inline-block;
+}
+  .product-info h2 {
+    font-family: "MuseoSans-7";
+    margin-bottom: .75rem;
+}
+  .product-info {
+    width: 44%;
+    padding: 0;
+}
+.slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer;
+}
+  .product-images .slick-dots li {
+    width: 100%;
+    height: auto;
+    margin-bottom: .25rem;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+  .product-images .slick-dots {
+    width: 8%;
+    position: absolute;
+    /* top: 0; */
+    /* left: 0; */
+}
+  .product-info {
+    width: 44%;
+    padding: 0;
+}
+  .product-images {
+    width: 54%;
+}
+  .product-container {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+  .catalog-pagination {
+    width: 78%;
+    margin: 0 0 0 auto;
+}
+  .catalog-container {
+    width: 78%;
+}
+  .filters-checkbox {
+    padding: .5rem .25rem;
+    font-size: .85rem;
+}
+  .filters-block-toggle {
+    background-color: transparent;
+    color: #999;
+  }
+  .filters-block {
+    padding: .25rem .5rem;
+  }
+  .filters-orderby p {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: .85rem;
+    color: #999;
+    margin-bottom: .5rem;
+}
+.filters-orderby label {
+  border-bottom: none;
+  padding: .5rem;
+}
+  /*  */
+  .catalog {
+    padding: 0;
+    min-height: 80vh;
+}
+.filters {
+  width: 20%;
+}
+.filters-container {
+  padding: 0;
+  background-color: #f6f6f6;
+  border-radius: .3rem;
+}
+.filters-list {
+  -webkit-animation: none;
+  animation: none;
+  position: relative;
+  background-color: transparent;
+  margin-bottom: 0;
+  overflow-y: visible;
+  z-index: 0;
+}
+.filters-list-head {
+  margin-bottom: .5rem;
+}
+.filters-list-quantity {
+  display: inline-block;
+  margin-top: 0;
+  border-bottom: 1px solid #ccc;
+}
+.filters-list-head button {
+  color: #00a3b0;
+  font-size: .75rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: -.25rem;
+}
+.filters-list-head button {
+  color: #00a3b0;
+  font-size: .75rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: -.25rem;
+}
+.filters-list-head button i {
+  font-size: 1rem;
+  margin-left: .1rem;
+}
+.filters-orderby {
+  padding: .5rem;
+  position: relative;
+  background-color: transparent;
+  -webkit-animation: none;
+  animation: none;
+  z-index: 0;
+}
+@media screen and (min-width: 760px){
+  .product-specs-attributes div {
+    width: 50%;
+}
+  .product-specs-description {
+    width: 49%;
+}
+  .product-add-to-cart-combo {
+    margin-right: 2rem;
+}
+  .product-add-to-cart {
+    position: static;
+    border-top: none;
+    border-bottom: 1px solid #ccc;
+    justify-content: flex-start;
+    padding: .75rem .5rem;
+}
+  .catalog-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 1rem;
+  }
+  .catalog-pagination {
+    width: 100%;
+    text-align: center;
+    color: #ccc;
+    padding: 1rem .5rem;
+  }
+  }
+  .catalog-pagination p {
+    display: inline-block;
+    margin: 1rem 0;
+    font-weight: 300;
+    padding: 1rem;
+    border-top: 1px solid #ccc;
+  }
+
+
+
 }
